--- a/Netflix.css
+++ b/Netflix.css
@@ -10,7 +10,6 @@ body {
     flex-direction: column;
     background: black;
     color: white;
-    
 }
 
 .hero-section {
@@ -29,7 +28,7 @@ body {
     align-items: center;
     justify-content: space-between;
     padding: 10px 0rem;
-    margin: 0px 7rem;
+    margin: 0 7rem;
 }
 
 .logo {
@@ -167,7 +166,7 @@ input {
 }
 
 .feature {
-    margin: 50px 7rem;
+    margin: 50px 0rem;
     font-size: 1.5rem;
     padding: 50px 0;
 }
@@ -176,7 +175,7 @@ input {
     display: flex;
     width: 100%;
     align-items: center;
-    padding: 50px 0;
+    padding: 50px 7rem;
     border: 2px 0px solid gray;
 }
 
@@ -197,7 +196,7 @@ input {
 
 .img-section img {
     width: 100%;
-    mix-blend-mode: luminosity;
+    mix-blend-mode: screen;
     object-fit: cover;
 }
 
@@ -209,20 +208,47 @@ input {
     object-fit: contain;
 }
 
+.vid2 {
+    position: absolute;
+    top: 10.5%;
+    left: 20%;
+    width: 60%;
+    object-fit: contain;
+}
+
+.faq {
+    margin: 0 8rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.faq h2 {
+    font-size: 3.5rem;
+    font-weight: bolder;
+    display: flex;
+    justify-content: center;
+    
+}
+
 .questions {
-    margin: 60px auto;
-    width: 100%;
-    max-width: 750px;
+    flex: 1;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    padding: 20px;
 }
 
 .questions li {
     list-style: none;
     width: 100%;
     padding: 5px;
+    height: 100px;
 }
 
 .questions li label {
     display: flex;
+    width: 100%;
     align-items: center;
     padding: 20px;
     font-size: 18px;
@@ -231,6 +257,11 @@ input {
     margin-bottom: 2px;
     cursor: pointer;
     position: relative;
+    height: 100%;
+    font-size: 1.5rem;
+    display: flex;
+    justify-content: space-between;
+    flex: 1;
 }
 
 label::after {
@@ -280,15 +311,18 @@ input[type="radio"] {
 
 .foot-content {
     padding-bottom: 20px;
+    margin: 0 7rem;
 }
 
 footer {
-    padding-top: 20px;
+    padding: 3rem 0;
     display: block;
     text-align: left;
     font-size: 0.7rem;
     color: rgb(180, 175, 175);
+    margin: 0 7rem;
 }
+
 
 footer h2 {
     margin: 20px;
@@ -306,27 +340,22 @@ span a {
 }
 
 .foot-col {
-    display: flex;
-    justify-content: left;
-    margin: 20px
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    column-gap: 1rem;
+    row-gap: 0.5rem;
+    padding: 2rem 0;
+    margin: 1.5rem;
 }
 
-.foot-row {
-    margin-right: 20px;
-}
-
-.foot-row a{
-    padding-bottom: 10px;
-}
-
-footer a:hover {
+footer a {
     text-decoration: underline;
 }
 
-.foot-row {
-    display: flex;
-    flex-direction: column;
+footer a:hover {
+    color: white;
 }
+
 
 .b3 {
     display: flex;
@@ -384,6 +413,7 @@ footer p {
         display: flex;
         flex-direction: column;
         justify-content: center;
+        padding: 50px 1rem;
     }
 
     .text-section {
@@ -400,6 +430,34 @@ footer p {
     }
     .text-section p{
         font-size: 1.1rem;
+    }
+
+    footer {
+        margin: 0 1rem;
+    }
+
+    .faq {
+        margin: 0 1rem;
+    }
+
+    .faq h2 {
+        font-size: 1.8rem;
+    }
+
+    .questions li label {
+        font-size: 1rem;
+    }
+
+    .even {
+        flex-direction: column-reverse;
+    }
+
+    .foot-content {
+        margin: 0 1rem;
+    }
+
+    .foot-col {
+        grid-template-columns: 1fr 1fr;
     }
 
 }
